unpackaged/main/default/objects/ffirule__fflib_BatchProcessDetail__c/fields/ffirule__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ApexJobId__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>