unpackaged/main/default/objects/ffirule__fflib_BatchProcessDetail__c/fields/ffirule__StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>ffirule__StatusDetail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>